--- a/roles/gerrit/templates/gerrit.config
+++ b/roles/gerrit/templates/gerrit.config
@@ -11,7 +11,7 @@ password = {{db_password}}
 [auth]
         type = OPENID
 [sendemail]
-        smtpServer = localhost
+        smtpServer = {{database_server}}
 [container]
         user = {{unix_user}}
         javaHome = /usr/lib/jvm/java-7-oracle/jre
